--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@datastax/astra-db-ts": "^1.5.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
+    "mapbox-gl": "^3.10.0",
     "next": "15.2.2",
     "openai": "^4.87.3",
     "react": "^19.0.0",
