--- a/package.json
+++ b/package.json
@@ -2,23 +2,32 @@
   "name": "alert-system",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "node --experimental-modules scripts/migrate-to-mongodb.js",
+    "init-db": "mongod --dbpath ./data/db",
+    "scrape": "curl http://localhost:3000/api/scheduler",
+    "test-data": "node --experimental-modules scripts/test-data.js"
   },
   "dependencies": {
-    "@astrajs/collections": "^0.0.2",
-    "@datastax/astra-db-ts": "^1.5.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.482.0",
     "mapbox-gl": "^3.10.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "next": "15.2.2",
     "openai": "^4.87.3",
     "react": "^19.0.0",
