--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test-data": "node --experimental-modules scripts/test-data.js"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
